# server-app/api/Endpoints/Tag/RemoveTagFromTodo.cs
@@ -6,25 +6,25 @@ using Npgsql;
 
 namespace api.Endpoints.Tag;
 
-
-public class AddTagToTodo : ICarterModule
+public class RemoveTagToTodo : ICarterModule
 {
     public void AddRoutes(IEndpointRouteBuilder app)
     {
-        app.MapPost("/api/todos/{todoId}/addTag/{tagId}",
+        app.MapDelete("/api/todos/{todoId}/addTag/{tagId}",
             (HttpContext context,
                 [FromServices] NpgsqlDataSource dataSource,
                 [FromRoute] int tagId,
                 [FromRouteAttribute] int todoId) =>
             {
                 var sql = @"
-INSERT INTO todo_manager.todo_tag (todoid, tagid)
-VALUES (@todoId, @tagId);";
+DELETE FROM todo_manager.todo_tag
+WHERE todoid = @todoId AND tagid = @tagId;
+";
                 using var conn = dataSource.OpenConnection();
                 {
                     var execution = conn.Execute(sql, new { todoId, tagId });
                     if (execution == 0)
-                        throw new InvalidOperationException("Could not add tag to todo.");
+                        throw new InvalidOperationException("Could not delete tag to todo.");
                 }
 
                 return new { success = true };
